# minou

./: .gitignore  Makefile.am  README.md  ast.c  ast.h  configure.ac  demo.lol  demo.mnu  interpret.c  interpret.h  parser.y  scanner.l
tests/: Makefile.am  comments.lol  comments.sh  empty.sh  hello.sh  run.sh
